<resources>
    <string name="app_name">Pokepedia</string>
    <string name="check_connection">Check connection</string>
    <string name="bulbasaur">Bulbasaur</string>

    <string name="search">Search</string>
    <string name="home">Home</string>
    <string name="saved_pokemon">Saved Pokemon</string>
    <string name="open_nav_drawer">Open Nav Drawer</string>
    <string name="close_nav_drawer">Close Nav Drawer</string>
    <string name="pokeball">pokeball</string>
    <string name="loading">Loading…</string>
    <string name="image_of_pokemon">image of pokemon</string>
    <string name="types">Types</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>


    <string name="weightKG">%1$.1f kg</string>
    <string name="heightM">%1$.1f m</string>
    <string name="stats">Stats</string>
    <string name="search_pokemon">Search Pokemon…</string>
    <string name="pokemon_not_found">Pokemon Not Found</string>
</resources>