<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.PokemonInfo">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:backgroundTint="@color/teal_700">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/teal_200"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    app:cardCornerRadius="35dp">

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="10dp">

                        <androidx.cardview.widget.CardView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:cardCornerRadius="30dp"
                            android:layout_marginBottom="10dp"
                            >

                            <TextView
                                android:id="@+id/pokemonName"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:textColor="@color/design_default_color_on_secondary"
                                android:background="@color/design_default_color_on_primary"
                                android:hint="@string/bulbasaur"
                                android:textSize="30sp" />

                        </androidx.cardview.widget.CardView>


                        <androidx.cardview.widget.CardView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:cardCornerRadius="30dp">

                            <ImageView
                                android:layout_gravity="center"
                                android:layout_width="200dp"
                                android:layout_height="200dp"
                                android:src="@drawable/jigglypuff"
                                android:contentDescription="@string/image_of_pokemon" />
                        </androidx.cardview.widget.CardView>



                    </androidx.appcompat.widget.LinearLayoutCompat>

                </androidx.cardview.widget.CardView>


                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="35dp"
                    android:backgroundTint="@color/teal_200"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp">

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/types"
                            android:gravity="center"
                            android:textSize="30sp"
                            android:textColor="@color/design_default_color_on_secondary"/>

                        <androidx.cardview.widget.CardView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:layout_marginEnd="10dp"
                            android:layout_marginBottom="10dp"
                            app:cardCornerRadius="35dp">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Flying"
                                android:textSize="30sp"
                                android:gravity="center"
                                android:layout_gravity="center"
                                android:textColor="@color/white"
                                android:background="@color/purple_500"/>

                        </androidx.cardview.widget.CardView>

                    </androidx.appcompat.widget.LinearLayoutCompat>


                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="35dp"
                    android:backgroundTint="@color/teal_200"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp">

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/height"
                            android:textColor="@color/design_default_color_on_secondary"
                            android:textSize="30sp" />

                        <androidx.cardview.widget.CardView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:layout_marginEnd="10dp"
                            android:layout_marginBottom="10dp"
                            app:cardCornerRadius="35dp">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:background="@color/purple_500"
                                android:gravity="center"
                                android:text="Flying"
                                android:textColor="@color/white"
                                android:textSize="30sp" />

                        </androidx.cardview.widget.CardView>

                    </androidx.appcompat.widget.LinearLayoutCompat>


                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="35dp"
                    android:backgroundTint="@color/teal_200"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp">

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/weight"
                            android:textColor="@color/design_default_color_on_secondary"
                            android:textSize="30sp" />

                        <androidx.cardview.widget.CardView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:layout_marginEnd="10dp"
                            android:layout_marginBottom="10dp"
                            app:cardCornerRadius="35dp">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:background="@color/purple_500"
                                android:gravity="center"
                                android:text="Flying"
                                android:textColor="@color/white"
                                android:textSize="30sp" />

                        </androidx.cardview.widget.CardView>

                    </androidx.appcompat.widget.LinearLayoutCompat>


                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="35dp"
                    android:backgroundTint="@color/teal_200"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp">

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Stats"
                            android:gravity="center"
                            android:textSize="30sp"
                            android:textColor="@color/design_default_color_on_secondary"/>

                        <androidx.cardview.widget.CardView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:layout_marginEnd="10dp"
                            android:layout_marginBottom="10dp"
                            app:cardCornerRadius="35dp">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Flying"
                                android:textSize="30sp"
                                android:gravity="center"
                                android:layout_gravity="center"
                                android:textColor="@color/white"
                                android:background="@color/purple_500"/>

                        </androidx.cardview.widget.CardView>

                    </androidx.appcompat.widget.LinearLayoutCompat>


                </androidx.cardview.widget.CardView>

            </androidx.appcompat.widget.LinearLayoutCompat>
        </ScrollView>


    </androidx.cardview.widget.CardView>

</FrameLayout>